before strokes unification

--- a/penis/penis.csproj
+++ b/penis/penis.csproj
@@ -49,6 +49,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Util\Shared Classes.csproj">
+      <Project>{cd2897ba-714e-4bc8-aa91-5ab4189ad710}</Project>
+      <Name>Shared Classes</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
