--- a/LANPaint Server/LANPaint Server.csproj
+++ b/LANPaint Server/LANPaint Server.csproj
@@ -53,7 +53,6 @@
     </StartupObject>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="PresentationFramework.Aero2" />
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
@@ -114,10 +113,17 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Permissions.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="PainterClientWindow.xaml.cs">
       <DependentUpon>PainterClientWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Permissions.xaml.cs">
+      <DependentUpon>Permissions.xaml</DependentUpon>
     </Compile>
     <Compile Include="Server.cs" />
     <Compile Include="PainterClient.cs" />
